<resources>
    <string name="app_name">vaguei</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile_nav">Perfil</string>
    <string name="internship_nav">Meu estágio</string>
    <string name="institutional_nav">Institucional</string>
    <string name="header_app">header_app</string>
    <string name="header_user">header_user</string>
    <string name="cpf_cnpj">cpf/cnpj</string>
    <string name="password">senha</string>
    <string name="sign_up">Crie uma conta!</string>
    <string name="login">entrar</string>
    <string name="sign_up_title">cadastro</string>
    <string name="text_redirect">sou:</string>
    <string name="student">estudante</string>
    <string name="professional">profissional</string>
    <string name="company">empresário</string>
    <string name="ensino">Ensino</string>
    <string name="emprego">Emprego</string>
    <string name="estagio">Estágio</string>
</resources>
