<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    
    <ImageView
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:src="@drawable/logo_png"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sail_regular"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textSize="60sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/cpf_cnpj"
        android:textColorHint="@color/primaryTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:id="@+id/email_login"
            android:textColor="@color/primaryTextColor"
            android:background="@drawable/shape_field"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/primaryTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"
            android:id="@+id/password_login"
            android:textColor="@color/primaryTextColor"
            android:background="@drawable/shape_field"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/button_login"
        android:background="@drawable/shape_button"
        android:layout_gravity="end"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="false"
        android:text="@string/login"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/ic_ufg"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</LinearLayout>